News UAT/force-app/main/default/objects/QA_Item__c/QA_Item__c.object-meta.xml
<CustomObject>
    <label>QA Item</label>
    <nameField>
        <displayFormat>QA-{00000}</displayFormat>
        <label>QA Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QA Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>