News UAT/force-app/main/default/objects/QA_Item__c/fields/QA_Checklist__c.field-meta.xml
<CustomField>
    <fullName>QA_Checklist__c</fullName>
    <label>QA Checklist</label>
    <referenceTo>QA_Checklist__c</referenceTo>
    <relationshipLabel>QA Items</relationshipLabel>
    <relationshipName>QA_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>